# retinopathy

./: .gitignore  README.md
grading/: config_reader.py  data.py  loss.py  network.py  pyproject.toml  requirements.txt  train.py  trainer.py
grading/config/: base.yaml  final.yaml
grading/config/loss/: asymmetric_loss.yaml  combined_loss.yaml  cross_entropy.yaml  distribution_focal.yaml  focal_alpha_weighted.yaml  focal_loss.yaml  label_smoothing.yaml  ohem_loss.yaml  poly_loss.yaml  weighted_crossentropy.yaml
grading/config/preprocessing/: advanced.yaml  advanced_fundus.yaml
mixoe/: config_reader.py  data.py  loss.py  network.py  pyproject.toml  requirements.txt  train.py  trainer.py
mixoe/config/: base.yaml  final.yaml  resnext50_combined_loss.yaml  resnext50_small.yaml
multihead/: config_reader.py  data.py  loss.py  network.py  pyproject.toml  requirements.txt  train.py  trainer.py
multihead/config/: base.yaml  final.yaml
segment/: config_reader.py  data.py  loss.py  network.py  pyproject.toml  requirements.txt  run_augmentation_experiments.py  setup_wandb.py  train.py  trainer.py
segment/config/: base.yaml  final.yaml
segment/config/augment/: color_light_geometric.yaml  heavy_augmentation.yaml  light_geometric.yaml  no_augmentation.yaml
segment/config/image_size/: image_size_1024.yaml  image_size_1536.yaml  image_size_256.yaml  image_size_512.yaml  image_size_768.yaml
segment/config/loss/: cross_entropy.yaml  dice_cross_entropy.yaml  dice_loss.yaml  focal_dice.yaml  focal_dice_tversky.yaml  focal_loss.yaml  focal_tversky.yaml  ici_loss.yaml  tversky_loss.yaml
segment/config/networks/: densenet161.yaml  efficientnet-b5.yaml  mit_b2_segformer.yaml  resnet34.yaml  resnet50.yaml  resnext50_32x4d.yaml  tu-hrnet_w32.yaml
segment/config/preprocessing/: advanced_fundus.yaml  advanced_fundus_clahe.yaml  center_crop_only.yaml  clahe_and_center_crop.yaml  clahe_only.yaml  no_preprocessing.yaml
segment/config/seg_head/: deeplabv3plus.yaml  manet.yaml  segformer.yaml  unetplusplus.yaml
